--- a/PinetumMapping/Info.plist
+++ b/PinetumMapping/Info.plist
@@ -2,9 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Pinetum app needs access to your camera to capture Pinetum photos</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Pinetum app captures photos and saves them to the Pinetum map</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
+		<string></string>
+		<string></string>
 	</array>
 </dict>
 </plist>
